# perftools

./: .gitignore  README.md  pyproject.toml
perftools/: __init__.py  androidsdk.py  apkrepacker.py  executable.py  logger.py  perfdata.py  perfstats.py  simpleperf.py
perftools/data/: repack_default.keystore
